issue 206 extra margin for sidebar and add body classes

--- a/css/sass/_rebrand.scss
+++ b/css/sass/_rebrand.scss
@@ -251,3 +251,7 @@ ul.tna-event-list>li {
 .no-float {
   float: none !important;
 }
+
+.mb-24 {
+  margin-bottom: 1.5em !important;
+}
